[gd_scene load_steps=9 format=3 uid="uid://phcl75naqfnw"]

[ext_resource type="Script" path="res://view/timer_group_view/timer_group_view.gd" id="1_duyjh"]
[ext_resource type="PackedScene" uid="uid://chh3v0bh3n3dd" path="res://component/navbar/nav_bar.tscn" id="2_i2sjs"]
[ext_resource type="Texture2D" uid="uid://cnvc7friiyrjp" path="res://asset/img/button-edit.png" id="3_kwixf"]
[ext_resource type="Texture2D" uid="uid://8d1qsnvamcid" path="res://asset/img/button-cog.png" id="3_s6gdt"]
[ext_resource type="PackedScene" uid="uid://qf8aqhi472jp" path="res://component/timer_group_list/timer_group_list.tscn" id="3_tqflf"]
[ext_resource type="Texture2D" uid="uid://c21t28dluvwtg" path="res://asset/img/button-done.png" id="4_8v76y"]
[ext_resource type="Texture2D" uid="uid://hm5al0glgjtl" path="res://asset/img/button-timer.png" id="4_ij4sk"]
[ext_resource type="Texture2D" uid="uid://dx4stvk0f1fd0" path="res://asset/img/button-group.png" id="5_1achs"]

[node name="TimerGroupView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_duyjh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("2_i2sjs")]
unique_name_in_owner = true
layout_mode = 2

[node name="EditModeButton" type="TextureButton" parent="VBoxContainer/NavBar/HBoxContainerRight" index="0"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_kwixf")
texture_pressed = ExtResource("4_8v76y")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TimerGroupList" parent="VBoxContainer/MarginContainer2" instance=ExtResource("3_tqflf")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 140)
layout_mode = 2
theme_override_constants/separation = 20

[node name="AddTimerButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Timer"
icon = ExtResource("4_ij4sk")

[node name="AddGroupButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Group"
icon = ExtResource("5_1achs")

[node name="EditGroupButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"
icon = ExtResource("3_s6gdt")

[connection signal="pressed" from="VBoxContainer/NavBar/HBoxContainerRight/EditModeButton" to="." method="_on_edit_mode_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/AddTimerButton" to="." method="_on_add_timer_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/AddGroupButton" to="." method="_on_add_group_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/EditGroupButton" to="." method="_on_edit_group_button_pressed"]

[editable path="VBoxContainer/NavBar"]
